[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/elements/mummy/Walk1.png" type="Texture" id=1]
[ext_resource path="res://assets/elements/mummy/Walk2.png" type="Texture" id=2]
[ext_resource path="res://assets/elements/mummy/Walk3.png" type="Texture" id=3]
[ext_resource path="res://assets/elements/mummy/Iddle.png" type="Texture" id=4]
[ext_resource path="res://assets/elements/mummy/Walk4.png" type="Texture" id=5]
[ext_resource path="res://scripts/Elements/mummy.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/mummy.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Iddle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 4 )

[node name="Mummy" type="KinematicBody2D"]
use_parent_material = true
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( -4, 0 )
frames = SubResource( 1 )
animation = "Iddle"
playing = true

[node name="MummyCollision" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( -4, 0 )
shape = SubResource( 2 )

[node name="MummySight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MummySight"]
modulate = Color( 1, 0.94902, 0.203922, 0.784314 )
self_modulate = Color( 1, 0.92549, 0.141176, 0.784314 )
scale = Vector2( 4, 4 )
shape = SubResource( 3 )

[node name="CollisionPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionPlayer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -4, 0 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 7.0

[connection signal="body_entered" from="MummySight" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="MummySight" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="CollisionPlayer" to="." method="_on_CollisionPlayer_body_entered"]
